zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__scroll_wheel_down_scrolls_pane.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: "format!(\"{}\", snapshot_after)"
---
00 (C): ┌ Pane #1 ──────────────────────────────────────────────────────────────────────────────────── SCROLL:  6/33 | able-ant ┐
01 (C): │Line 27                                                                                                                │
02 (C): │Line 28                                                                                                                │
03 (C): │Line 29                                                                                                                │
04 (C): │Line 30                                                                                                                │
05 (C): │Line 31                                                                                                                │
06 (C): │Line 32                                                                                                                │
07 (C): │Line 33                                                                                                                │
08 (C): │Line 34                                                                                                                │
09 (C): │Line 35                                                                                                                │
10 (C): │Line 36                                                                                                                │
11 (C): │Line 37                                                                                                                │
12 (C): │Line 38                                                                                                                │
13 (C): │Line 39                                                                                                                │
14 (C): │Line 40                                                                                                                │
15 (C): │Line 41                                                                                                                │
16 (C): │Line 42                                                                                                                │
17 (C): │Line 43                                                                                                                │
18 (C): │Line 44                                                                                                                │
19 (C): └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
